# python-client

./: .buildinfo  .doctrees  .gitattributes  .gitignore  .gitmodules  .travis.yml  .zenodo.json  CHANGES.rst  MANIFEST.in  README.md  README.rst  api.html  codecov.yml  genindex.html  get_version.py  index.html  links.html  long_description.rst  naming.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorials.html  update_changes.sh  versioneer.py  versions.json
.circleci/: config.yml
.doctrees/: api.doctree  environment.pickle  index.doctree  links.doctree
.doctrees/api/: templateflow.conf.bids.doctree
.doctrees/contributing_tutorials/: uploading_to_existing_template.doctree
.github/workflows/: pythonpackage.yml
.maint/: update_changes.sh  update_requirements.py
0.4.2/: .buildinfo  genindex.html  index.html  links.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.4.2/.doctrees/: environment.pickle  index.doctree  links.doctree
0.4.2/_modules/: index.html
0.4.2/api/: templateflow.api.html  templateflow.conf.bids.html  templateflow.conf.html  templateflow.html
0.4.2rc1/: genindex.html  index.html  links.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.4.2rc1/.doctrees/: environment.pickle  index.doctree  links.doctree
0.4.2rc1/_modules/: index.html
0.4.2rc1/api/: templateflow.api.html  templateflow.conf.bids.html  templateflow.conf.html  templateflow.html
0.5.0/: .buildinfo  api.html  genindex.html  index.html  links.html  naming.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.5.0/.doctrees/: api.doctree  environment.pickle  index.doctree  links.doctree  naming.doctree  tutorials.doctree
0.5.0/_modules/: index.html
0.5.0/_sources/: index.rst.txt
0.5.0/api/: templateflow.api.html  templateflow.conf.bids.html  templateflow.conf.html
0.5.0/contributing_tutorials/: adding_a_new_template.html  prerequisites_to_contributing.html  uploading_to_existing_template.html
0.5.0rc1/: api.html  genindex.html  index.html  links.html  naming.html  py-modindex.html  search.html  searchindex.js  tutorials.html
0.5.0rc1/.doctrees/: api.doctree  environment.pickle  index.doctree  links.doctree  naming.doctree  tutorials.doctree
0.5.0rc1/_modules/: index.html
0.5.0rc1/api/: templateflow.api.html  templateflow.conf.bids.html  templateflow.conf.html
0.5.0rc1/contributing_tutorials/: adding_a_new_template.html  prerequisites_to_contributing.html  uploading_to_existing_template.html
0.5.1/: .buildinfo  api.html  genindex.html  index.html  links.html  naming.html  objects.inv  py-modindex.html  search.html  tutorials.html
0.5.1/.doctrees/: api.doctree  environment.pickle  index.doctree  links.doctree  naming.doctree  tutorials.doctree
0.5.1/_modules/: index.html
0.5.1/api/: templateflow.api.html  templateflow.conf.bids.html  templateflow.conf.html
0.5.1/contributing_tutorials/: adding_a_new_template.html  prerequisites_to_contributing.html  uploading_to_existing_template.html
0.5.1rc1/: api.html  genindex.html  index.html  links.html  naming.html  py-modindex.html  search.html  searchindex.js  tutorials.html
0.5.1rc1/.doctrees/: environment.pickle  naming.doctree
0.5.1rc1/_modules/: index.html
0.5.1rc1/api/: templateflow.api.html  templateflow.conf.bids.html  templateflow.conf.html
0.5.1rc1/contributing_tutorials/: adding_a_new_template.html  prerequisites_to_contributing.html  uploading_to_existing_template.html
0.5.2/: .buildinfo  api.html  genindex.html  index.html  links.html  naming.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.5.2/.doctrees/: api.doctree  environment.pickle  index.doctree  links.doctree  (+2 more)
0.6.0/: .buildinfo  api.html  genindex.html  index.html  links.html  naming.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.6.0rc1/: api.html  genindex.html  index.html  links.html  naming.html  py-modindex.html  search.html  searchindex.js  tutorials.html
0.6.0rc2/: api.html  genindex.html  index.html  links.html  naming.html  py-modindex.html  search.html  searchindex.js  tutorials.html
0.6.1/: .buildinfo  api.html  genindex.html  index.html  links.html  naming.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.6.2/: .buildinfo  api.html  genindex.html  index.html  links.html  naming.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.6.3/: .buildinfo  api.html  genindex.html  index.html  links.html  naming.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.7.0/: .buildinfo  api.html  genindex.html  index.html  links.html  naming.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.7.1/: .buildinfo  api.html  genindex.html  index.html  links.html  naming.html  py-modindex.html  search.html  searchindex.js  tutorials.html
0.7.1rc0/: api.html  genindex.html  index.html  links.html  naming.html  py-modindex.html  search.html  searchindex.js  tutorials.html
_modules/: index.html
api/: templateflow.api.html  templateflow.conf.bids.html  templateflow.conf.html  templateflow.html
contributing_tutorials/: adding_a_new_template.html  prerequisites_to_contributing.html  uploading_to_existing_template.html
docs/: Makefile  api.rst  changes.rst  cli.rst  conf.py  datalad.rst  environment.yml  examples.rst  index.rst  installation.rst  naming.rst  requirements.txt  templateflow_naming.rst
doctrees/: api.doctree  changes.doctree  datalad.doctree  examples.doctree  index.doctree  installation.doctree  links.doctree  naming.doctree  tutorials.doctree
master/: .buildinfo  api.html  changes.html  datalad.html  examples.html  genindex.html  index.html  installation.html  links.html  naming.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
templateflow/: __about__.py  __init__.py  _loader.py  _version.py  api.py  cli.py  client.py  conf.py  templateflow_get.py
(+334 files in other folders)
