[metadata]
url = https://github.com/poldracklab/templateflow
author = The CRN developers
author_email = code@oscaresteban.es
maintainer = Oscar Esteban
maintainer_email = code@oscaresteban.es
description = TemplateFlow Python Client - TemplateFlow is the Zone of neuroimaging templates.
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5
install_requires =
    pybids ~= 0.9.2
    requests
    tqdm
test_requires =
    pytest
    pytest-xdist
    pytest-cov == 2.5.1
    coverage
packages = find:
include_package_data = True

[options.package_data]
templateflow =
    conf/config.json
    conf/templateflow-skel.zip

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
datalad =
    datalad

doc =
    nbsphinx
    packaging
    pydot>=1.2.3
    pydotplus
    sphinx-argparse
    sphinx>=2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest
    pytest-xdist
    pytest-cov == 2.5.1
    coverage
tests =
    %(test)s
all =
    %(datalad)s
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = templateflow/_version.py
versionfile_build = templateflow/_version.py
tag_prefix =
parentdir_prefix =
