[metadata]
url = https://github.com/poldracklab/templateflow
author = The CRN developers
author_email = code@oscaresteban.es
maintainer = Oscar Esteban
maintainer_email = code@oscaresteban.es
description = TemplateFlow Python Client - TemplateFlow is the Zone of neuroimaging templates.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
setup_requires =
    setuptools >= 42.0
    setuptools_scm >= 3.4
    toml
install_requires =
    pybids >= 0.9.2
    requests
    tqdm
test_requires =
    pytest
    pytest-xdist
    pytest-cov == 2.5.1
    coverage
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
citations =
    doi2bib
datalad =
    datalad ~= 0.11.8
doc =
    nbsphinx
    packaging
    pydot>=1.2.3
    pydotplus
    sphinx-argparse
    sphinx>=2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest
    pytest-xdist
    pytest-cov == 2.5.1
    coverage
tests =
    %(test)s
all =
    %(datalad)s
    %(doc)s
    %(test)s

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503

[tool:pytest]
norecursedirs = .git
addopts = -svx
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True

