[metadata]
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = TemplateFlow Python Client - TemplateFlow is the Zone of neuroimaging templates.
license = Apache-2.0
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
maintainer = The NiPreps developers
maintainer_email = nipreps@gmail.com
project_urls =
    Archive = https://github.com/templateflow/templateflow
    Bug Tracker = https://github.com/templateflow/python-client/issues
    Home = https://www.templateflow.org
    Documentation = https://www.templateflow.org/python-client/
    Source Code = https://github.com/templateflow/python-client

[options]
python_requires = >= 3.6
install_requires =
    pybids >= 0.9.2
    requests
    tqdm
test_requires =
    pytest
    pytest-xdist
    pytest-cov == 2.5.1
    coverage
packages = find:
zip_safe = true

[options.package_data]
templateflow =
    conf/config.json
    conf/templateflow-skel.zip
    conf/templateflow-skel.md5

[options.packages.find]
exclude =
    *.tests
    tests.*
    *.tests.*

[options.extras_require]
citations =
    doi2bib
datalad =
    datalad ~= 0.12.0
doc =
    nbsphinx
    packaging
    pydot>=1.2.3
    pydotplus
    sphinx-argparse
    sphinx>=2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest
    pytest-xdist
    pytest-cov == 2.5.1
    coverage
tests =
    %(test)s
all =
    %(datalad)s
    %(doc)s
    %(test)s

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503

[tool:pytest]
norecursedirs = .git
addopts = -svx
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True

